# analytical-platform-ui

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  .yaml-lint.yml  .yamllint  Dockerfile  Makefile  README.md  manage.py  manifest_bucket.json  manifest_data_dir.json  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.txt  run-server.sh
.devcontainer/: devcontainer-lock.json  devcontainer.json  initialise.sh  post-create.sh  post-start.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: build-test.yml  chart-lint.yml  chart-release.yml  codeql-analysis.yml  container-release.yml  container-scan.yml  container-test.yml  dependency-review.yml  enforce-version-pinning.yml  openssf-scorecard.yml  pre-commit-update.yml  release.yml  scan-image.yml  scheduled-container-scan.yml  super-linter.yml  test.yml  zizmor.yml
ap/: asgi.py  urls.py  views.py  wsgi.py
ap/auth/: __init__.py  apps.py  oidc.py  urls.py
ap/auth/views/: __init__.py  mixins.py  views.py
ap/aws/: __init__.py  base.py  glue.py  iam.py  lakeformation.py  quicksight.py  ram.py  session.py
ap/core/: apps.py  context_processors.py
ap/core/middleware/: __init__.py  never_cache.py
ap/database_access/: admin.py  apps.py  forms.py  urls.py  views.py
ap/database_access/migrations/: 0001_initial.py  0002_add_default_permissions.py  0002_intial_access_levels.py  0003_accesslevel_display_name.py  (+3 more)
ap/databases/: apps.py  forms.py  urls.py  views.py
ap/poc/: apps.py  forms.py  models.py  urls.py  utils.py  views.py
ap/quicksight/: apps.py  urls.py
ap/settings/: __init__.py  common.py  local.py  test.py
ap/users/: admin.py  apps.py  models.py
assets/scss/: app.scss
chart/: Chart.yaml  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  nginx-configmap.yaml  service.yaml  serviceaccount.yaml
container/: Dockerfile
container/test/: container-structure-test.yml
contrib/: docker-compose-postgres.yml  docker-compose-test.yml
controlpanel/: urls.py  views.py
controlpanel/auth/: __init__.py  urls.py
controlpanel/core/: views.py
controlpanel/settings/: common.py
controlpanel/users/: models.py
examples/: .env.example  launch.json.example  tasks.json.example
scripts/container/: entrypoint.sh
scripts/devcontainer/: post-create.sh
templates/: base.html  govuk-frontend.html  home.html  login-fail.html  login.html  quicksight.html
templates/database_access/: list.html
templates/databases/: project_create.html  project_detail.html  project_list.html
templates/includes/: breadcrumbs.html  footer.html  messages.html  nav_item.html
templates/poc/: create_data_filter.html  data_filter_detail.html  database_detail.html  database_list.html  ram_share.html  ram_share_resources.html  shared_resources.html  table_detail.html  update_data_filter.html
templates/quicksight/: index.html
tests/: conftest.py  container-structure-test.yml
tests/auth/: test_oidc.py
tests/aws/: test_glue.py  test_lakeformation.py  test_quicksight.py  test_ram.py  test_session.py
tests/core/: test_context_processors.py
tests/database_access/: test_database_access_views.py  test_forms.py
tests/fixtures/: aws_fixtures.py
tests/quicksight/: test_quicksight_views.py
tests/users/: test_models.py
(+53 files in other folders)
