[project]
name = "analytical-platform-ui"
version = "0.2.0"
description = "Analytical Platform UI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib==1.6.3",
    "boto3==1.40.20",
    "django==5.2.6",
    "django-extensions==4.1",
    "django-structlog==9.1.1",
    "gunicorn==23.0.0",
    "psycopg[binary]==3.2.9",
    "pyjwt==2.10.1",
    "python-dotenv==1.1.1",
    "requests==2.32.5",
    "sentry-sdk==2.35.1",
    "uvicorn[standard]==0.32.0",
]


[dependency-groups]
dev = [
    "django-debug-toolbar==6.0.0",
    "ipython>=9.5.0",
    "model-bakery==1.20.5",
    "moto[all]==5.1.13",
    "pre-commit==4.3.0",
    "pytest==8.4.1",
    "pytest-django==4.11.1",
    "pytest-dotenv==0.5.2",
    "ruff==0.12.12",
]


[tool.ruff]
line-length = 100


[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.pytest.ini_options]
addopts = "-v --tb=auto --ds=ap.settings.test"
testpaths = ["tests"]
